# moos-ivp-lefteris3544

missions/lab_03/alder-Odometry/: alder.moos
missions/lab_04/alpha_Return/: alpha.moos
missions/lab_04/alpha_Return_Now/: alpha.moos
missions/lab_05/bravo_loiter/: bravo_loiter.bhv  bravo_loiter.moos  launch.sh
missions/lab_05/bravo_loiter_dbl/: bravo_loiter_dbl.bhv  bravo_loiter_dbl.moos  launch.sh
missions/lab_05/bravo_loiter_uuv/: bravo_loiter_uuv.bhv  bravo_loiter_uuv.moos  launch.sh
missions/lab_05/bravo_uuv_fair/: bravo_uuv_fair.bhv  bravo_uuv_fair.moos  launch.sh
missions/lab_05/bravo_uuv_odometry/: bravo_uuv_odometry.bhv  bravo_uuv_odometry.moos  launch.sh
missions/lab_05/bravo_uuv_surface/: bravo_uuv_surface.bhv  bravo_uuv_surface.moos  launch.sh
missions/lab_06/s15_alpha_pshare/: alpha.moos  launch.sh  shoreside.moos
missions/lab_06/s16_alpha_bravo_pshare/: alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_06/s18_henry_gilda_refuel/: meta_vehicle.bhv
missions/lab_06/s19_henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.bhv  plug_pMarinePIDV22.moos  plug_uSimMarineV22.moos
missions/lab_07/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pGenPath.moos  plug_pPointAssign.moos  plug_pRealm.moos  plug_uProcessWatch.moos  plug_uTimerScript.moos
missions/lab_09/: athens_01.txt  athens_02.txt  athens_rand.txt  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos  plug_pGenRescue.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_pMarinePIDV22.moos  plug_uFldNodeBroker.moos  plug_uFldRescueMgr.moos  plug_uProcessWatch.moos  plug_uSimMarineV22.moos
missions/lab_10/: .gitignore  LAB10_STEPS.md  meta_vehicle.bhv  results.txt
missions/lab_11/: .gitignore  LAB11_STEPS.md
missions/lab_12/: LAB12_STEPS.md
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+18 files in other folders)
